Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36439

Assertion `thd_arg->lex->sql_command != SQLCOM_CREATE_SEQUENCE || (flags2 & FL_DDL) || thd_arg->in_mult i_stmt_transaction_mode()' failed

    XMLWordPrintable

Details

    Description

      --source include/have_log_bin.inc
      --source include/have_innodb.inc
       
      CREATE SEQUENCE s1 ENGINE=InnoDB;
      RENAME TABLE s1 TO s2;
      CREATE OR REPLACE SEQUENCE s2 ENGINE=InnoDB;
      

      bb-main-monty efaa497684bcaf6d389447ce64f0c3cf1979b788

      mariadbd: /data/bld/preview-12.0-bb-main-monty/sql/log_event_server.cc:2926: Gtid_log_event::Gtid_log_event(THD*, uint64, uint32, bool, uint16, bool, uint64, bool, bool): Assertion `thd_arg->lex->sql_command != SQLCOM_CREATE_SEQUENCE || (flags2 & FL_DDL) || thd_arg->in_multi_stmt_transaction_mode()' failed.
      250402 16:33:19 [ERROR] /share8t/bld/preview-12.0-bb-main-monty-debug/sql/mariadbd got signal 6 ;
       
      #9  0x00007fc424c53eb2 in __GI___assert_fail (assertion=0x55e342db3598 "thd_arg->lex->sql_command != SQLCOM_CREATE_SEQUENCE || (flags2 & FL_DDL) || thd_arg->in_multi_stmt_transaction_mode()", file=0x55e342db1848 "/data/bld/preview-12.0-bb-main-monty/sql/log_event_server.cc", line=2926, function=0x55e342db34c0 "Gtid_log_event::Gtid_log_event(THD*, uint64, uint32, bool, uint16, bool, uint64, bool, bool)") at ./assert/assert.c:101
      #10 0x000055e3421c5fd7 in Gtid_log_event::Gtid_log_event (this=0x7fc4181732d0, thd_arg=0x7fc3ec000dc8, seq_no_arg=3, domain_id_arg=0, standalone=true, flags_arg=8, is_transactional=false, commit_id_arg=0, has_xid=false, ro_1pc=false) at /data/bld/preview-12.0-bb-main-monty/sql/log_event_server.cc:2926
      #11 0x000055e342191db2 in MYSQL_BIN_LOG::write_gtid_event (this=0x55e343a04f20 <mysql_bin_log>, thd=0x7fc3ec000dc8, standalone=true, is_transactional=false, commit_id=0, commit_by_rotate=false, has_xid=false, is_ro_1pc=false) at /data/bld/preview-12.0-bb-main-monty/sql/log.cc:7109
      #12 0x000055e342192c95 in MYSQL_BIN_LOG::write (this=0x55e343a04f20 <mysql_bin_log>, event_info=0x7fc418173920, with_annotate=0x0) at /data/bld/preview-12.0-bb-main-monty/sql/log.cc:7453
      #13 0x000055e341b4a7f2 in THD::binlog_query (this=0x7fc3ec000dc8, qtype=THD::STMT_QUERY_TYPE, query_arg=0x7fc3ec018140 "CREATE OR REPLACE SEQUENCE s2 ENGINE=InnoDB", query_len=43, is_trans=false, direct=false, suppress_use=false, errcode=0) at /data/bld/preview-12.0-bb-main-monty/sql/sql_class.cc:8091
      #14 0x000055e341cf90fb in write_bin_log (thd=0x7fc3ec000dc8, clear_error=true, query=0x7fc3ec018140 "CREATE OR REPLACE SEQUENCE s2 ENGINE=InnoDB", query_length=43, is_trans=false) at /data/bld/preview-12.0-bb-main-monty/sql/sql_table.cc:1070
      #15 0x000055e341d04d39 in Table_specification_st::finalize_create_table (this=0x7fc418174610, thd=0x7fc3ec000dc8, orig_table=0x7fc3ec018270, query=0x7fc3ec018140 "CREATE OR REPLACE SEQUENCE s2 ENGINE=InnoDB", query_length=43, is_trans=false) at /data/bld/preview-12.0-bb-main-monty/sql/sql_table.cc:4699
      #16 0x000055e341d07843 in mysql_create_table (thd=0x7fc3ec000dc8, create_table=0x7fc3ec018270, create_info=0x7fc418174610, alter_info=0x7fc418174490) at /data/bld/preview-12.0-bb-main-monty/sql/sql_table.cc:5626
      #17 0x000055e341d21ed0 in Sql_cmd_create_table_like::execute (this=0x7fc3ec018238, thd=0x7fc3ec000dc8) at /data/bld/preview-12.0-bb-main-monty/sql/sql_table.cc:13941
      #18 0x000055e341bd4ed6 in mysql_execute_command (thd=0x7fc3ec000dc8, is_called_from_prepared_stmt=false) at /data/bld/preview-12.0-bb-main-monty/sql/sql_parse.cc:5887
      #19 0x000055e341bdb19d in mysql_parse (thd=0x7fc3ec000dc8, rawbuf=0x7fc3ec018140 "CREATE OR REPLACE SEQUENCE s2 ENGINE=InnoDB", length=43, parser_state=0x7fc4181752e0) at /data/bld/preview-12.0-bb-main-monty/sql/sql_parse.cc:7917
      #20 0x000055e341bc73ad in dispatch_command (command=COM_QUERY, thd=0x7fc3ec000dc8, packet=0x7fc3ec00c099 "CREATE OR REPLACE SEQUENCE s2 ENGINE=InnoDB", packet_length=43, blocking=true) at /data/bld/preview-12.0-bb-main-monty/sql/sql_parse.cc:1903
      #21 0x000055e341bc5d06 in do_command (thd=0x7fc3ec000dc8, blocking=true) at /data/bld/preview-12.0-bb-main-monty/sql/sql_parse.cc:1416
      #22 0x000055e341dd5d81 in do_handle_one_connection (connect=0x55e37af3a938, put_in_cache=true) at /data/bld/preview-12.0-bb-main-monty/sql/sql_connect.cc:1415
      #23 0x000055e341dd5b02 in handle_one_connection (arg=0x55e37ae7b628) at /data/bld/preview-12.0-bb-main-monty/sql/sql_connect.cc:1327
      #24 0x000055e34235c13e in pfs_spawn_thread (arg=0x55e37af3a4a8) at /data/bld/preview-12.0-bb-main-monty/storage/perfschema/pfs.cc:2198
      #25 0x00007fc424ca81c4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #26 0x00007fc424d2885c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.