MDEV-36439 Assertion `thd_arg->lex->sql_command != 	   SQLCOM_CREATE_SEQUENCE || (flags2 & FL_DDL) || 	   thd_arg->in_mult i_stmt_transaction_mode()' failed

Preserve m_unsafe_rollback_flags before commit like it was done in
sequence_insert(). Also treating the error status on return is always
good practice.