sql/sql_sequence.cc
@@ -690,7 +690,14 @@ int SEQUENCE::read_initial_values(TABLE *table)
     */
     if (!has_active_transaction && !thd->transaction->stmt.is_empty() &&
         !thd->in_sub_stmt)
-      trans_commit_stmt(thd);
+    {
+      uint save_unsafe_rollback_flags=
+        thd->transaction->stmt.m_unsafe_rollback_flags;
+      if (trans_commit_stmt(thd))
+        error= HA_ERR_COMMIT_ERROR;
+      thd->transaction->stmt.m_unsafe_rollback_flags=
+        save_unsafe_rollback_flags;
+    }
   }
   write_unlock(table);
   DBUG_RETURN(error);
